--- a/fianl_project/pubspec.yaml
+++ b/fianl_project/pubspec.yaml
@@ -20,6 +20,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.5.4
+  
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,12 +31,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+   
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   animated_bottom_navigation_bar: ^1.3.3
+  image_picker: ^1.1.2
   
  # flutter_icons: ^0.0.3
   page_transition: ^2.1.0
